<resources>
    <string name="app_name">CalculApp</string>
    <string name="One">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiple">×</string>
    <string name="div">÷</string>
    <string name="Clear">C</string>
    <string name="modulo">%</string>
    <string name="equal">=</string>
    <string name="puissance">^</string>
    <string name="point">.</string>
    <string name="plusslashminus">+/-</string>
    <string name="input"> </string>
    <string name="backspace"> </string>
</resources>