<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".MainActivity">
    <TableLayout android:id="@+id/tableLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/input" app:layout_constraintVertical_bias="0.95">
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button android:id="@+id/clearButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:text="@string/Clear" android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textColor="@color/black"/>
            <Button android:id="@+id/moduloButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:text="@string/modulo" android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textColor="@color/black"/>
            <Button android:id="@+id/puissButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:text="@string/puissance" android:textColor="@color/black"/>
            <Button android:id="@+id/divButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:text="@string/div" android:textColor="@color/black"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button android:id="@+id/sevenButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:text="@string/seven" android:textColor="@color/black"/>
            <Button android:id="@+id/eightButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:text="@string/eight" android:textColor="@color/black"/>
            <Button android:id="@+id/nineButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:text="@string/nine" android:textColor="@color/black"/>
            <Button android:id="@+id/multiButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:text="@string/multiple" android:textColor="@color/black"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button android:id="@+id/fourButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:text="@string/four" android:textColor="@color/black"/>
            <Button android:id="@+id/fiveButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:text="@string/five" android:textColor="@color/black"/>
            <Button android:id="@+id/sixButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:text="@string/six" android:textColor="@color/black"/>
            <Button android:id="@+id/minusButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:text="@string/minus" android:textColor="@color/black"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button android:id="@+id/oneButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:text="@string/One" android:textColor="@color/black"/>
            <Button android:id="@+id/twoButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:text="@string/two" android:textColor="@color/black"/>
            <Button android:id="@+id/threeButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:text="@string/three" android:textColor="@color/black"/>
            <Button android:id="@+id/plusButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:text="@string/plus" android:textColor="@color/black"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button android:id="@+id/plusMinusButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:text="@string/plusslashminus" android:textColor="@color/black"/>
            <Button android:id="@+id/zeroButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:text="@string/zero" android:textColor="@color/black"/>
            <Button android:id="@+id/pointButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:onClick="point" android:text="@string/point" android:textColor="@color/black"/>
            <Button android:id="@+id/equalButton" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:text="@string/equal" android:textColor="@color/black" app:backgroundTint="#CD4D2575"/>
        </TableRow>
    </TableLayout>
    <TextView android:id="@+id/input" android:layout_width="0dp" android:text="@string/input" android:textColor="#80000000" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:textSize="32sp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.95" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" android:autofillHints="false" android:inputType="none" tools:ignore="LabelFor " android:textAlignment="textEnd"/>
    <ImageButton android:id="@+id/button2" style="@style/Widget.AppCompat.Button.Borderless" android:layout_width="86dp" android:layout_height="48dp" android:layout_margin="3dp" android:layout_weight="1" android:background="@drawable/border" android:contentDescription="@string/backspace" android:onClick="backspaceButton" app:backgroundTint="#CD4D2575" app:layout_constraintBottom_toTopOf="@+id/tableLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/input" app:layout_constraintVertical_bias="0.96" app:srcCompat="@drawable/backspace"/>
</androidx.constraintlayout.widget.ConstraintLayout>